# open-lotto

./: .gitignore  Anchor.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs  switchboard.rs
frontend/: .gitignore  package.json  tsconfig.base.json
frontend/apps/admin/: .env.example  next.config.js  package.json  tsconfig.json
frontend/apps/admin/src/app/: globals.css  layout.tsx  page.tsx
frontend/apps/admin/src/app/draw/: page.tsx
frontend/apps/admin/src/app/initialize/: page.tsx
frontend/apps/admin/src/app/pots/: page.tsx
frontend/apps/admin/src/app/treasury/: page.tsx
frontend/apps/admin/src/components/: Providers.tsx  Sidebar.tsx
frontend/apps/mobile/: app.json  metro.config.js  package.json
frontend/apps/mobile/app/: _layout.tsx
frontend/apps/mobile/app/(tabs)/: _layout.tsx  index.tsx  lottery.tsx  tickets.tsx  wallet.tsx
frontend/apps/mobile/app/lottery/: [address].tsx
frontend/apps/mobile/providers/: ConnectionProvider.tsx  WalletProvider.tsx
frontend/apps/web/: package.json  tailwind.config.js
frontend/apps/web/src/app/: globals.css  layout.tsx  page.tsx
frontend/apps/web/src/app/lottery/: page.tsx
frontend/apps/web/src/app/lottery/[address]/: page.tsx
frontend/apps/web/src/app/tickets/: page.tsx
frontend/apps/web/src/components/: CountdownDisplay.tsx  Header.tsx  LotteryCard.tsx  Providers.tsx
programs/open-lotto/: Cargo.toml
programs/open-lotto/src/: lib.rs  output.rs
programs/open-lotto/tests/: openlotto.rs
tests/: open-lotto.ts
