[package]
name = "open-lotto-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for Open Lotto - invoke randomness oracle and manage lottery"

[[bin]]
name = "open-lotto"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Solana
solana-sdk = "2.2"
solana-client = "2.2"

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# HTTP client for Switchboard gateway
reqwest = { version = "0.11", features = ["json"] }

# Utils
anyhow = "1.0"
dirs = "5.0"
solana-cli-config = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bs58 = "0.5"
borsh = "1.5"
base64 = "0.21"

# SPL
spl-associated-token-account = { version = "6", features = ["no-entrypoint"] }
spl-token = { version = "8", features = ["no-entrypoint"] }
hex = "0.4"
