[package]
name = "open-lotto"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "open_lotto"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = {  version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["token"] }
strum = "0.27"
strum_macros = "0.27"
switchboard-on-demand = "0.10.1"
rand = "0.8.5"

[dev-dependencies]
solana-program = "2"
solana-message = "2"
solana-transaction = "2"
solana-transaction-error = "2"
solana-keypair = "2"
solana-signer = "2"
solana-pubkey = "2"
solana-account = "2"
litesvm = "0.7"
spl-token = "8"
